discord-frontend/hartex-discord-commands-test/tests/ui/expected_parenthesized_parameter.stderr
error: expected parenthesized parameter
  --> tests/ui/expected_parenthesized_parameter.rs:26:11
   |
26 | #[metadata[]]
   |           ^^
